--- a/Shop Manager/Assembly-CSharp.csproj
+++ b/Shop Manager/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\Controllers\MouseController.cs" />
      <Compile Include="Assets\Controllers\WorldController.cs" />
+     <Compile Include="Assets\Models\Furniture.cs" />
      <Compile Include="Assets\Models\Tile.cs" />
      <Compile Include="Assets\Models\World.cs" />
  <Reference Include="UnityEngine.UI">
