--- a/Shop Manager/Assembly-CSharp.csproj
+++ b/Shop Manager/Assembly-CSharp.csproj
@@ -45,16 +45,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Controllers\CharacterSpriteController.cs" />
      <Compile Include="Assets\Scripts\Controllers\FurnitureSpriteController.cs" />
      <Compile Include="Assets\Scripts\Controllers\MouseController.cs" />
      <Compile Include="Assets\Scripts\Controllers\WorldController.cs" />
+     <Compile Include="Assets\Scripts\Models\Character.cs" />
      <Compile Include="Assets\Scripts\Models\Furniture.cs" />
      <Compile Include="Assets\Scripts\Models\FurnitureActions.cs" />
      <Compile Include="Assets\Scripts\Models\Tile.cs" />
      <Compile Include="Assets\Scripts\Models\World.cs" />
+     <Compile Include="Assets\Scripts\Pathfinding\Path_AStar.cs" />
+     <Compile Include="Assets\Scripts\Pathfinding\Path_Edge.cs" />
+     <Compile Include="Assets\Scripts\Pathfinding\Path_Node.cs" />
+     <Compile Include="Assets\Scripts\Pathfinding\Path_TileGraph.cs" />
      <Compile Include="Assets\Scripts\UI\AutomaticHorizontalSize.cs" />
      <Compile Include="Assets\Scripts\UI\AutomaticVerticalSize.cs" />
      <Compile Include="Assets\Scripts\UI\TileInspector.cs" />
+     <Compile Include="Assets\Scripts\Utilities\PriorityQueue\FastPriorityQueue.cs" />
+     <Compile Include="Assets\Scripts\Utilities\PriorityQueue\FastPriorityQueueNode.cs" />
+     <Compile Include="Assets\Scripts\Utilities\PriorityQueue\IPriorityQueue.cs" />
+     <Compile Include="Assets\Scripts\Utilities\PriorityQueue\SimplePriorityQueue.cs" />
+     <None Include="Assets\Scripts\Utilities\PriorityQueue\GITHUB PAGE.txt" />
+     <None Include="Assets\Scripts\Utilities\PriorityQueue\LICENSE.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
