--- a/Shop Manager/Assembly-CSharp.csproj
+++ b/Shop Manager/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\Models\Stock.cs" />
      <Compile Include="Assets\Scripts\Models\Tile.cs" />
      <Compile Include="Assets\Scripts\Models\World.cs" />
+     <Compile Include="Assets\Scripts\Pathfinding\FindNearestFreeTile.cs" />
      <Compile Include="Assets\Scripts\Pathfinding\Path_AStar.cs" />
      <Compile Include="Assets\Scripts\Pathfinding\Path_Edge.cs" />
      <Compile Include="Assets\Scripts\Pathfinding\Path_Node.cs" />
